# tamr-client

./: .adr-dir  .flake8  .gitignore  .python-version  .releaserc.yaml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  VERSION.txt  mypy.ini  noxfile.py  pyproject.toml  readthedocs.yml  setup.py  tasks.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md  QUESTION.md
.github/PULL_REQUEST_TEMPLATE/: BUG_FIX.md  NEW_FEATURE.md
.github/workflows/: ci.yml  release.yml
doc/: index.rst
docs/: beta.md  conf.py  contributor-guide.md  contributor-guide.rst  developer-interface.rst  index.md  index.rst  reference.md  requirements.txt
docs/_templates/: footer.html
docs/beta/: attribute.md  attributes.md  auth.rst  backup.rst  categorization.md  dataset.md  datasets.md  golden_records.md  instance.rst  mastering.md  operation.rst  primary_key.rst  project.rst  response.rst  restore.rst  schema_mapping.md  session.rst  transformations.rst
docs/contributor-guide/: adrs.md  bugs-and-features.md  config-text-editor.md  dev-tasks.md  how-to-write-docs.md  how-to-write-tests.md  install.md  migration.md  navigating-inheritance.md  pull-request.md  run-and-build.md  style-guide.md  text-editor.md  toolchain.md
docs/reference/: attribute.rst  auth.rst  categorization.rst  client.rst  dataset.rst  machine_learning_model.rst  mastering.rst  operation.rst  project.rst
docs/user-guide/: advanced-usage.md  advanced-usage.rst  faq.md  faq.rst  geo.md  geo.rst  installation.md  installation.rst  logging.md  pandas.md  quickstart.md  quickstart.rst  secure-credentials.md  secure-credentials.rst  spec.md  spec.rst  workflows.md  workflows.rst
examples/: continuous_mastering.py  get_tamr_version.py
examples/flask-proxy/: app.py  flask_proxy.py  requirements.txt
python/: CHANGELOG.md  README.md
python/doc/: .gitignore  conf.py
python/src/: pyproject.json
python/test/: requirements.txt
src/: MANIFEST.in  setup.py
stubs/: pandas.pyi  pytest.pyi  responses.pyi
stubs/simplejson/: errors.pyi
tamr_client/: __init__.py  _beta.py  backup.py  beta.py  exception.py  instance.py  json_dict.py  operation.py  primary_key.py  project.py  response.py  restore.py  session.py  transformations.py  types.py  url.py
tamr_client/_types/: __init__.py  attribute.py  auth.py  backup.py  dataset.py  instance.py  operation.py  project.py  restore.py  session.py  transformations.py  url.py
tamr_client/attribute/: __init__.py  _attribute.py  configuration.py  sub.py  type.py
tamr_client/attributes/: __init__.py  attribute.py  attribute_type.py  sub.py  subattribute.py  type.py  type_alias.py
tamr_client/categorization/: __init__.py  _categorization.py  project.py
tamr_client/dataset/: __init__.py  _dataset.py  dataframe.py  dataset.py  record.py  unified.py
tamr_client/datasets/: __init__.py  dataframe.py  dataset.py  record.py
tamr_client/examples/: get_tamr_version.py
tamr_client/golden_records/: __init__.py  _golden_records.py  project.py
tamr_client/mastering/: __init__.py  _mastering.py  project.py
tamr_client/schema_mapping/: __init__.py  _schema_mapping.py  attribute_mapping.py  project.py
tamr_unify_client/: __init__.py  _custom_encoder.py  _ignore_nan_encoder.py  base_builder.py  base_collection.py  base_model.py  base_resource.py  client.py  operation.py  response.py  url.py
tamr_unify_client/attribute/: collection.py  resource.py  subattribute.py  type.py
tamr_unify_client/attributes/: attribute.py  attribute_type.py  subattribute.py
tamr_unify_client/auth/: __init__.py  jwt_token.py  token.py  username_password.py
tamr_unify_client/categorization/: project.py  taxonomy.py
tamr_unify_client/category/: collection.py  resource.py
tamr_unify_client/dataset/: collection.py  profile.py  resource.py  status.py  uri.py  usage.py  use.py
tamr_unify_client/datasets/: dataset.py
tamr_unify_client/mastering/: attribute_mapping.py  attribute_mapping_collection.py  binning_model.py  cluster_configuration.py  estimated_pair_counts.py  project.py
tamr_unify_client/models/: base_collection.py  base_resource.py  binning_model.py  dataset_profile.py  (+3 more)
tests/: requirements.txt  temp_test.py  utils.py
unify_api_v1/: __init__.py
(+304 files in other folders)
