[tool.poetry]
name = "tamr-unify-client"
version = "0.11.0"
description = "Python Client for the Tamr API"
license = "Apache-2.0"
authors = ["Pedro Cattori <pedro.cattori@tamr.com>"]
readme = "README.md"
homepage = "https://tamr-client.readthedocs.io/en/stable/"
repository = "https://github.com/Datatamer/tamr-client"
keywords = ["tamr"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8"
]
packages = [
    { include = "tamr_client" },
    { include = "tamr_unify_client" },
]
include = ["tamr_client/py.typed"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22"
simplejson = "^3.16"
dataclasses = "^0.6.0"

[tool.poetry.dev-dependencies]
Sphinx = "^2.1"
responses = "^0.10.6"
flake8-import-order = "^0.18.1"
black = {version = "^19.3b0",allow-prereleases = true}
flake8 = "^3.7"
toml = "^0.10.0"
sphinx_rtd_theme = "^0.4.3"
recommonmark = "^0.6.0"
sphinx-autodoc-typehints = "^1.8"
pandas = "^0.25.3"
pytest = "^5.3.2"
invoke = "^1.4.0"
mypy = "^0.770"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
