[tool.poetry]
name = "tamr-unify-client"
version = "0.0.0"
description = "Python Client for the Tamr API"
license = "Apache-2.0"
authors = ["Samuel Kalish <samuel.kalish@tamr.com>"]
readme = "README.md"
homepage = "https://tamr-client.readthedocs.io/en/stable/"
repository = "https://github.com/Datatamer/tamr-client"
keywords = ["tamr"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
packages = [
    { include = "tamr_client" },
    { include = "tamr_unify_client" },
]
include = ["tamr_client/py.typed"]

[tool.poetry.dependencies]
python = "^3.7.1"
requests = "^2.22"
urllib3 = "<2"

[tool.poetry.dev-dependencies]
responses = "^0.10.6"
flake8-import-order = "^0.18.1"
flake8 = "^5.0.0"
pytest = "^7.2.0"
nox = "^2022.11.21"
pandas = "^1.0.5"
black = "^22.12.0"
mypy = "^1.2.0"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
